# haswaynav

./: Cargo.toml  LICENSE  README.md  flake.nix  treefmt.toml
src/: cli.rs  cursor.rs  lib.rs  main.rs  messages.rs  tree.rs  types.rs
src/tree/: cursor.rs  sway-tree.json
