[package]
name = "sway-nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.8", features = ["derive"] }
either = "1.9.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

